Fix weird tool options switching views spradically

The hidden tool options should not be a part of the main widget
hierarchy, otherwise they may activate a different canvas accidentially
on the enableness switch of a sibling.

BUG:447522